This adjusts the .row elements in the #footer to prevent horizontal spill

--- a/v6/v6.less
+++ b/v6/v6.less
@@ -2595,3 +2595,10 @@ a.rvdsfProductShowcasePagination.rvdPreviousAction {
 a.rvdsfProductShowcasePagination.rvdNextAction {
   background-image: url(/Portals/0/Home/img/product-next-bt.png);
 }
+
+/* Footer */
+#footer .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
